<resources>
    <string name="app_name">Weather</string>
    <string name="search">Enter your City</string>
    <string name="title_activity_search">search</string>
    <string name="humidity">Humidity</string>
    <string name="feelslike">Feels like</string>
    <string name="visibility">Visibility</string>
    <string name="windspeed">Wind Speed</string>
    <string name="airpressure">Air Pressure</string>
    <string name="sealevel">Sea Pressure</string>
    <string name="percentage">%</string>
    <string name="celcius">°</string>
    <string name="kilometer">km</string>
    <string name="metres">m</string>
    <string name="feet">ft</string>
    <string name="pressure">hPa</string>
    <string name="pressure2">psi</string>
    <string name="kilometerperhour">km/h</string>
    <string name="metrespersecond">m/s</string>
    <string name="milesperhour">mph</string>
    <string name="mercury">Hg</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="location_message">To get more accurate weather information, allow Weather to access your precise location.</string>
    <string name="agree">Allow</string>
    <string name="disagree">Dismiss</string>
    <string name="slash"> / </string>
    <string name="airquality">Air Quality</string>
    <string name="hourlyforcast">3-Hourly Forcast</string>
    <string name="dailyforcast">Daily Forcast</string>
    <string name="topcities">Top Cities</string>
    <string name="mumbai">Mumbai</string>
    <string name="chennai">Chennai</string>
    <string name="newdelhi">New Delhi</string>
    <string name="hyderabad">Hyderabad</string>
    <string name="bengalure">Bengaluru</string>
    <string name="kolkata">Kolkata</string>
    <string name="topworldcities">Top Cities - World</string>
    <string name="newyork">New York City</string>
    <string name="london">London</string>
    <string name="tokyo">Tokyo</string>
    <string name="singapore">Singapore</string>
    <string name="paris">Paris</string>
    <string name="rome">Rome</string>
    <string name="mexicocity">Mexico City</string>
    <string name="losangeles">Los Angeles</string>
    <string name="chicago">Chicago</string>
    <string name="beijing">Beijing</string>
    <string name="temperature">Temperature</string>
    <string name="settings_celcius">Celsius (°C)</string>
    <string name="settings_faranheit">Fahrenheit (°F)</string>
    <string name="settings_metres_per_second">Metres per second (m/s)</string>
    <string name="settings_miles_per_hour">Miles per hour (mph)</string>
    <string name="settings_kilometres_per_hour">Kilometres per hour (km/h)</string>
    <string name="settings_hectopascals">Hectopascals (hPa)</string>
    <string name="settings_pounds_per_square_inch">Pounds per square inch (psi)</string>
    <string name="settings_kilometres">Kilometres (km)</string>
    <string name="settings_feet">Feet (ft)</string>
    <string name="settings_metres">Metres (m)</string>
    <string name="units">Units</string>
    <string name="settings">Settings</string>
    <string name="settings_inHg">inHg</string>
    <string name="pressure3">inHg\n</string>
    <string name="settings_inches_of_mercury">Inches of mercury (inHg)\n</string>
    <string name="notifications">Notifications</string>
    <string name="notification1heading">"Get Weather Daily"</string>
    <string name="notification1description">Get notifications daily morning at 8:00 for your current city.</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>

</resources>